# BLT

./: .gitignore  .gitmodules  CMakeLists (conflicted copy 2025-02-24 222236).txt  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  arg_parse_variant_map.drawio  build_and_run_debug.sh  cloc.sh  commit.py  commit.py.save  commit.sh  default.nix  design.txt  exclude.txt  py_commit_helper.sh  test.txt  todo.txt
cmake/: color.cmake  sanitizers.cmake  warnings.cmake
include/blt/: compatibility.h  config.h.in  debug.h  unicode_emoji.h
include/blt/format/: boxing.h  format.h
include/blt/fs/: cstdio_wrappers.h  file_writers.h  filesystem.h  fwddecl.h  limited_writers.h  loader.h  nbt.h  path_helper.h  stream_wrappers.h  threaded_writers.h
include/blt/iterator/: common.h  enumerate.h  flatten.h  fwddecl.h  iter_common.h  iterator.h  zip.h
include/blt/logging/: ansi.h  fmt_tokenizer.h  fwddecl.h  injector.h  logging.h  logging_config.h  status.h
include/blt/math/: aabb.h  averages.h  bounding_box.h  colors.h  fixed_point.h  fixed_point_vectors.h  interpolation.h  log_util.h  math.h  matrix.h  storage.h  vectors.h
include/blt/math/v2/: algebra.h  storage.h
include/blt/meta/: codegen.h  config_generator.h  function.h  is_streamable.h  iterator.h  meta.h  passthrough.h  serialization.h  tuple_filters.h  type_traits.h
include/blt/nbt/: nbt.h  nbt_block.h
include/blt/outcome/: expected.h
include/blt/parse/: argparse.h  argparse_2.h  argparse_v2.h  mustache.h  obj_loader.h  templating.h
include/blt/profiling/: profiler.h  profiler_v2.h
include/blt/std/: allocator.h  any.h  array.h  assert.h  atomic_allocator.h  binary_tree.h  bump_allocator.h  defines.h  error.h  expected.h  filesystem.h  format.h  hash_map.h  hashmap.h  iterator.h  loader.h  logging.h  logging_old.h  map.h  math.h  memory.h  memory_util.h  meta.h  mmap.h  queue.h  queues.h  random.h  ranges.h  requests.h  simd.h  string.h  string_algo.h  system.h  thread.h  time.h  types.h  utility.h  uuid.h  variant.h  vector.h
include/blt/window/: window.h
src/blt/format/: format.cpp
src/blt/fs/: cstdio_wrappers.cpp  file_writers.cpp  filesystem.cpp  limited_writers.cpp  loader.cpp  nbt.cpp  nbt_block.cpp  path_helper.cpp  stream_wrappers.cpp  threaded_wrtiers.cpp
src/blt/logging/: ansi.cpp  fmt_tokenizer.cpp  logging.cpp  logging_config.cpp  status.cpp
src/blt/math/: colors.cpp  math.cpp
src/blt/nbt/: nbt.cpp  nbt_block.cpp
src/blt/parse/: argparse.cpp  argparse_2.cpp  argparse_v2 (conflicted copy 2025-02-13 150255).cpp  argparse_v2.cpp  obj_loader.cpp  templating.cpp
src/blt/profiling/: profiler.cpp  profiler_v2.cpp
src/blt/std/: assert.cpp  error.cpp  filesystem.cpp  format.cpp  loader.cpp  logging.cpp  logging_old.cpp  mmap.cpp  queues.cpp  random.cpp  requests.cpp  simd.cpp  string.cpp  string_algo.cpp  system.cpp
src/blt/window/: window.cpp
src/tests/: binary_trees.h  hashmap_tests.h  logging.h  main.cpp  nbt_tests.cpp  nbt_tests.h  profiling_tests.h  queue_tests.h
tests/: CMakeLists.txt  argparse_tests.cpp  clean.sh  iterator_tests.cpp  logger_tests.cpp  test.sh  variant_tests.cpp
tests/clang-debug/: CMakeCache.txt
tests/clang-debug-addr/: CMakeCache.txt
tests/clang-reldebug-addr/: CMakeCache.txt
tests/clang-release/: CMakeCache.txt
tests/debug/: CMakeCache.txt
tests/debug-addr/: CMakeCache.txt
tests/include/: blt_tests.h  memory_test.h  string_tests.h  templating_test.h  utility_test.h
tests/iterator/: iterator_tests_v2.cpp
tests/reldebug-addr/: CMakeCache.txt
tests/release/: CMakeCache.txt
tests/src/: allocator_tests.cpp  container_test.cpp  datastructure_tests.cpp  hashmap_tests.h  logging.h  main.cpp  math_tests.cpp  memory_test.cpp  nbt_tests.cpp  nbt_tests.h  profiling_tests.h  string_tests.cpp  template_test.cpp  utility_test.cpp
